Updating example titles

--- a/examples/1_TabBasedChat.html
+++ b/examples/1_TabBasedChat.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Test</title>
+		<title>Example 1 - Tab Based Chat</title>
 		
 		<script src="../TabTalk.js"></script>
 	</head>
