--- a/examples/3_Objects.html
+++ b/examples/3_Objects.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Test</title>
+		<title>Example 3 - Sending Objects</title>
 		
 		<script src="../TabTalk.js"></script>
 	</head>
