--- a/examples/2_Announcer.html
+++ b/examples/2_Announcer.html
@@ -1,6 +1,6 @@
 <html>
 	<head>
-		<title>Test</title>
+		<title>Example 2 - Simple Announcer</title>
 		
 		<script src="../TabTalk.js"></script>
 	</head>
